--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "element-plus": "^1.0.2-beta.70",
+    "query-string": "^7.0.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.11"
   },
